<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidEw</string>
    <string name="start_server">Start Server</string>
    <string name="stop_server">Stop Server</string>
    <string name="storage_not_allowed">Could not start server: External Files Directory not allowed or not found</string>
    <string name="starting">Starting…</string>
    <string name="stopping">Stopping…</string>
    <string name="loading">Loading…</string>
    <string name="server_started">Server Started! (hopefully)</string>
    <string name="server_stopped">Server Stopped</string>
    <string name="unable_to_request_permission">We can\'t request this permission on your device. It should still be okay though. If you encounter issues, allow notifications in settings</string>
    <string name="continue_txt">Continue</string>
    <string name="permission_granted">Permission granted!</string>
    <string name="notification_permission_denied">Permission denied, the app may not function properly. If this is the case you can enable notifications later in settings</string>
    <string name="download_links">Choose a version to download and install:</string>
    <string name="download_jp">Download JP APK</string>
    <string name="download_gl">Download Global APK</string>
    <string name="download_starting">Starting download…</string>
    <string name="download_progress">Downloading: %1$d%%</string>
    <string name="downloading_generic">Downloading…</string>
    <string name="download_complete_installing">Download complete. Opening installer…</string>
    <string name="download_manual"><![CDATA[Alternatively, <a href="https://ethanthesleepy.one/public/lovelive/sif2/localhost/">download manually</a>]]></string>
    <string name="download_failed_manual"><![CDATA[Download failed. Please try again or download manually: <br/> <a href="https://ethanthesleepy.one/public/lovelive/sif2/localhost/">Manual Download Page</a>]]></string>
    <string name="git_notice"><![CDATA[<a href=\'https://git.ethanthesleepy.one/ethanaobrien/ew-android\'>View repository</a> - <a href=\'https://git.ethanthesleepy.one/ethanaobrien/ew/src/branch/main/LICENSE\'>License</a>]]></string>
    <string name="apk_folder_notice"><![CDATA[<a href=\'https://ethanthesleepy.one/public/lovelive/sif2/localhost/\'>Download APKs here</a>]]></string>
    <string name="notification_title">Ew server</string>
    <string name="notification_text">Sif2 private server is running!</string>
    <string name="home_title">Ew private server</string>
    <string name="footer_text">I like Yui</string>
    <string name="center_page_text">If the server crashes, this app should too (I think)</string>
    <string name="open_webui">Open webui: http://127.0.0.1:8080</string>
    <string name="installing_the_game">Installing the game</string>
    <string name="installing_center_text">Choose a version of the game to download and install automatically.</string>
    <string name="needed_permissions">This app needs notification permissions</string>
    <string name="request_permissions">Request permission</string>
    <string name="setup_completed">Setup Finished!</string>
    <string name="setup_completed_desc">The game has been prepared. You can now start the server from the home screen.</string>
    <string name="get_started">Get Started</string>
    <string name="save_and_back">Save &amp; Back</string>
    <string name="first_start_instructions">Close and re-open the app to start the server</string>
    <string name="first_launch_title">Ew, Why?</string>
    <string name="first_launch_footer_note">The sif2 private server that\'s more stable than the original</string>
    <string name="begin_setup">Begin setup</string>
    <string name="app_widget_description">Start/Stop the server from your homes-screen</string>
    <string name="app_version">App Version %s</string>
    <string name="server_internal_version">Server Version %s</string>
    <string name="settings">Settings</string>
    <string name="launch_on_startup">Launch on app startup</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="easter_mode">Easter Mode</string>

    <!-- Added for CDN / multilang / external resource support -->
    <string name="service_name">AndroidEw Server</string>
    <string name="server_running">EW server is running</string>
    <string name="restart_server">Restart Server</string>
    <string name="server_logs">Server Logs</string>
    <string name="install_game">Install Game</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="select_folder">Select folder</string>
    <string name="select_archives_folder">Select archives folder</string>
    <string name="asset_path_title">External CDN package root (optional)</string>
    <string name="choose_asset_path">Choose CDN package root</string>
    <string name="masterdata_path_title">Masterdata override directory (optional)</string>
    <string name="choose_masterdata_path">Choose masterdata override directory</string>
    <string name="path_picker_note">This CDN path is for large extracted CDN packages such as EN-Android.7z, ZH-Android.7z and KR-Android.7z. It is not the small ew/assets source submodule, which is compiled into libew.so. Leave masterdata blank to use bundled data.</string>
    <string name="all_files_access_needed">AndroidEw needs All files access to serve external CDN files from %1$s. Please enable Allow access to manage all files, then return and start the server again.</string>
    <string name="external_cdn_all_files_access_needed">External CDN directory needs All files access: %1$s. Please allow AndroidEw to manage all files in system settings, then return and start the server again.</string>
</resources>
